Create student explorer level index template
Create a project level index template so that it can be added to other apps. Created a template subfolder in student_explorer dir.

--- a/seumich/templates/seumich/advisor_detail.html
+++ b/seumich/templates/seumich/advisor_detail.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %} {% load filters %}{% block content %} {% if advisor %}
+{% extends 'student_explorer/index.html' %} {% load filters %}{% block content %} {% if advisor %}
 <div>
     <div class="main-page-end-margin-bottom" id="load-advisor-detail">
         <h2 class="sub-header">{{ studentListHeader }}</h2> {% if students %}
