--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %} {% load filters %} {% block head %} {% load staticfiles %}
+{% extends 'student_explorer/index.html' %} {% load filters %} {% block head %} {% load staticfiles %}
 <script src='{% static 'seumich/student.js' %}'></script>
 {% endblock %} {% block content %} {% load static %} {% static "" as baseUrl %}
 
