--- a/seumich/templates/seumich/student_list.html
+++ b/seumich/templates/seumich/student_list.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %} {% block content %} {% load filters %}
+{% extends 'student_explorer/index.html' %} {% block content %} {% load filters %}
 
 <h2 class="sub-header">{{ studentListHeader }}</h2> {% if students %}
 <hr class="main-no-margin-top" />
