--- a/seumich/templates/seumich/student_class_site_list.html
+++ b/seumich/templates/seumich/student_class_site_list.html
@@ -30,9 +30,19 @@
         <div class="row student-desc">
             <div class="col-md-2"><a class="class-site-title" href="/students/{{student.username}}/class_sites/{{classSite.code}}/">{{ classSite.description }}</a></div>
             <div class="col-md-2 status-icon">
-                {% load static %} {% static "" as baseUrl %}
-                <span data-toggle="tooltip" title="{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite|status_to_text }}" data-placement="bottom">
-               <img src="{{ baseUrl }}/images/Status_Icons_{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite }}.png" width="25px" hspace="3"></img></span>
+              <span data-toggle="tooltip" title="{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite|status_to_text }}" data-placement="bottom">
+                {% with status=student.studentclasssitestatus_set.all|get_student_class_status:classSite %}
+                {% if status == 'Green' %}
+                  <img src="{{ baseUrl }}images/Status_Icons_Green.png" width="25px" hspace="3"></img>
+                {% elif status == 'Yellow' %}
+                  <img src="{{ baseUrl }}images/Status_Icons_Yellow.png" width="25px" hspace="3"></img>
+                {% elif status == 'Red' %}
+                  <img src="{{ baseUrl }}images/Status_Icons_Red.png" width="25px" hspace="3"></img>
+                {% elif status == 'Not Applicable' %}
+                  <img src="{{ baseUrl }}images/Status_Icons_Not Applicable.png" width="25px" hspace="3"></img>
+                {% endif %}
+                {% endwith %}
+              </span>
             </div>
             <div class="col-md-8">
                 <div class="average-bar-container">
