--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="no-js">
 
 <head>
-    {% load staticfiles %}
+    {% load static from staticfiles %}
+    {% static "" as baseUrl %}
     <meta charset="utf-8">
     <title>Student Explorer</title>
     <meta name="description" content="">
