--- a/seumich/templates/seumich/student_list.html
+++ b/seumich/templates/seumich/student_list.html
@@ -1,5 +1,5 @@
 {% extends 'student_explorer/index.html' %} {% block content %} {% load filters %}
-
+{% load static from staticfiles %}
 <h2 class="sub-header">{{ studentListHeader }}</h2> {% if students %}
 <hr class="main-no-margin-top" />
 <h3>Students</h3> {% endif %} {% if not students %} {% if user.is_authenticated %}
@@ -35,13 +35,13 @@
                       <span data-toggle="tooltip" title="{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite|status_to_text:classSite }}" data-placement="bottom">
                         {% with status=student.studentclasssitestatus_set.all|get_student_class_status:classSite %}
                         {% if status == 'Green' %}
-                          <img src="{{ baseUrl }}images/Status_Icons_Green.png" width="25px" hspace="3"></img>
+                          <img src="{% static 'images/Status_Icons_Green.png' %}" width="25px" hspace="3"></img>
                         {% elif status == 'Yellow' %}
-                          <img src="{{ baseUrl }}images/Status_Icons_Yellow.png" width="25px" hspace="3"></img>
+                          <img src="{% static 'images/Status_Icons_Yellow.png' %}" width="25px" hspace="3"></img>
                         {% elif status == 'Red' %}
-                          <img src="{{ baseUrl }}images/Status_Icons_Red.png" width="25px" hspace="3"></img>
+                          <img src="{% static 'images/Status_Icons_Red.png' %}" width="25px" hspace="3"></img>
                         {% elif status == 'Not Applicable' %}
-                          <img src="{{ baseUrl }}images/Status_Icons_Not Applicable.png" width="25px" hspace="3"></img>
+                          <img src="{% static 'images/Status_Icons_Not Applicable.png' %}" width="25px" hspace="3"></img>
                         {% endif %}
                         {% endwith %}
                       </span>
