Use 'index.html' instead of 'error.html'
'index.html' created in student_explorer folder is used. This keeps the basic layout consistent across pages.

--- a/seumich/templates/400.html
+++ b/seumich/templates/400.html
@@ -1,4 +1,4 @@
-{% extends 'error.html' %}
+{% extends 'student_explorer/index.html' %}
 
 {% block title %}
 <title>Bad Request:(</title>
@@ -8,6 +8,5 @@
 <div class="container">
     <h1>Bad Request <span>:(</span></h1>
     <p>Sorry, your browser sent a request that this server could not understand.</p>
-    <a href="/">Go to Main Page!</a>
 </div>
 {% endblock %}
