--- a/seumich/templates/404.html
+++ b/seumich/templates/404.html
@@ -1,4 +1,4 @@
-{% extends 'error.html' %}
+{% extends 'student_explorer/index.html' %}
 
 {% block title %}
 <title>Page Not Found :(</title>
@@ -13,6 +13,5 @@
         <li>a mistyped address</li>
         <li>an out-of-date link</li>
     </ul>
-    <a href="/">Go to Main Page!</a>
 </div>
 {% endblock %}
