--- a/seumich/templates/403.html
+++ b/seumich/templates/403.html
@@ -1,4 +1,4 @@
-{% extends 'error.html' %}
+{% extends 'student_explorer/index.html' %}
 
 {% block title %}
 <title>Forbidden :(</title>
@@ -8,6 +8,5 @@
 <div class="container">
     <h1>Permission Denied <span>:(</span></h1>
     <p>Sorry, you don't have permission to open this page.</p>
-    <a href="/">Go to Main Page!</a>
 </div>
 {% endblock %}
