--- a/seumich/templates/500.html
+++ b/seumich/templates/500.html
@@ -1,4 +1,4 @@
-{% extends 'error.html' %}
+{% extends 'student_explorer/index.html' %}
 
 {% block title %}
 <title>Internal Server Error  :(</title>
@@ -8,6 +8,5 @@
 <div class="container">
     <h1>Server Error <span>:(</span></h1>
     <p>Sorry, the server encountered an internal error and was unable to complete your request.</p>
-    <a href="/">Go to Main Page!</a>
 </div>
 {% endblock %}
