Remove emoticon from message
Removed emoticon : ( from html files

--- a/seumich/templates/403.html
+++ b/seumich/templates/403.html
@@ -1,12 +1,12 @@
 {% extends 'student_explorer/index.html' %}
 
 {% block title %}
-<title>Forbidden :(</title>
+<title>Forbidden</title>
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Permission Denied <span>:(</span></h1>
+    <h1>Permission Denied</h1>
     <p>Sorry, you don't have permission to open this page.</p>
 </div>
 {% endblock %}
