--- a/seumich/templates/500.html
+++ b/seumich/templates/500.html
@@ -1,12 +1,12 @@
 {% extends 'student_explorer/index.html' %}
 
 {% block title %}
-<title>Internal Server Error  :(</title>
+<title>Internal Server Error</title>
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Server Error <span>:(</span></h1>
+    <h1>Server Error</h1>
     <p>Sorry, the server encountered an internal error and was unable to complete your request.</p>
 </div>
 {% endblock %}
