--- a/seumich/templates/400.html
+++ b/seumich/templates/400.html
@@ -1,12 +1,12 @@
 {% extends 'student_explorer/index.html' %}
 
 {% block title %}
-<title>Bad Request:(</title>
+<title>Bad Request</title>
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Bad Request <span>:(</span></h1>
+    <h1>Bad Request</h1>
     <p>Sorry, your browser sent a request that this server could not understand.</p>
 </div>
 {% endblock %}
