--- a/seumich/templates/404.html
+++ b/seumich/templates/404.html
@@ -1,12 +1,12 @@
 {% extends 'student_explorer/index.html' %}
 
 {% block title %}
-<title>Page Not Found :(</title>
+<title>Page Not Found</title>
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Not found <span>:(</span></h1>
+    <h1>Not found</h1>
     <p>Sorry, but the page you were trying to view does not exist.</p>
     <p>It looks like this was the result of either:</p>
     <ul>
