Change tab heading to 'Students'

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -40,7 +40,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/students/" data-toggle="collapse" data-target="#navbar.in">My Students</a></li>
+                    <li><a href="/students/" data-toggle="collapse" data-target="#navbar.in">Students</a></li>
                     <li><a href="/advisors/" data-toggle="collapse" data-target="#navbar.in">Advisors</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
