--- a/seumich/templates/seumich/student.html
+++ b/seumich/templates/seumich/student.html
@@ -9,7 +9,7 @@
 
 <div>
     <div class="student-detail-mobile">
-        <h2 class="sub-header">{{student.first_name}} {{student.last_name}}</h2>
+        <h1 class="sub-header">{{student.first_name}} {{student.last_name}}</h1>
         <p><a href="mailto:{{student.email_address}}">{{student.email_address}}</a></p>
         <p><a class="unsortable">Student ID: </a>{{ student.univ_id }}</p>
         <hr class="main-no-margin-top" />
@@ -17,7 +17,7 @@
 
     <div class="student-detail-main-menu">
         <div class="student-detail-main-menu-top">
-            <p class="student-detail-student-name">{{student.first_name}} {{student.last_name}}</p>
+            <h1 class="student-detail-student-name">{{student.first_name}} {{student.last_name}}</h1>
             <p class="student-detail-student-id">Student ID: {{ student.univ_id }}</p>
             <p class="student-detail-student-email"><a href="mailto:{{student.email_address}}" class="student-detail-student-email-link">{{student.email_address}}</a></p>
         </div>
