--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -1,6 +1,6 @@
 {% load filters %}
 
-<h2 class="student-detail-summary-title">Student Summary</h2>
+<h2>Courses Summary</h2>
 <hr class="main-no-margin-top" />
 <div class="student-detail-summary-content">{% include 'seumich/student_class_site_list.html' %}</div>
 <div class="student-info">
