--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -95,12 +95,25 @@ h2{
     margin:30px 0px 10px;
     font-size:24px;
 }
+
 h3.student-course-list{
   font-size: 18px;
   margin:0px;
   margin-top:5px;
   font-weight:500;
 }
+
+.student-detail-left-menu-courses h3 {
+    width: 70%;
+    margin-top: 16px;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    font-size: 18px;
+    color: #1c3144;
+    display: inline-block;
+    word-wrap: break-word;
+}
+
  /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-top: 0;
@@ -202,17 +215,6 @@ th[scope="row"] {
 .student-detail-left-menu-courses {
     min-height: 60px;
     border-bottom: 1px solid #D4D4D4;
-}
-
-.student-detail-left-menu-courses p {
-    width: 70%;
-    margin-top: 16px;
-    margin-bottom: 10px;
-    padding-left: 20px;
-    font-size: 18px;
-    color: #1c3144;
-    display: inline-block;
-    word-wrap: break-word;
 }
 
 .student-detail-left-menu-courses:hover {
