finished adding alt text to status icons across all pages.

--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -37,7 +37,7 @@
               {% elif status == 'Red' %}
                 <img src="{{ baseUrl }}images/Status_Icons_Red.png" alt="Red engage status icon" width="25px"></img>
               {% elif status == 'Not Applicable' %}
-                <img src="{{ baseUrl }}images/Status_Icons_Not Applicable.png" width="25px"></img>
+                <img src="{{ baseUrl }}images/Status_Icons_Not Applicable.png" alt="no status available for this course icon" width="25px"></img>
               {% endif %}
               {% endwith %}
             </a>
@@ -60,7 +60,7 @@
                         {% elif status == 'Red' %}
                           <img src="{{ baseUrl }}images/Status_Icons_Red.png" alt="Red engage status icon" width="25px" hspace="10"></img>
                         {% elif status == 'Not Applicable' %}
-                          <img src="{{ baseUrl }}images/Status_Icons_Not Applicable.png" width="25px" hspace="10"></img>
+                          <img src="{{ baseUrl }}images/Status_Icons_Not Applicable.png" alt="no status available for this course icon" width="25px" hspace="10"></img>
                         {% endif %}
                         {% endwith %}
                       </span>
